# Tensors

./: .clang-format  .gitignore  .makefile.swp  .tensor.hh.swp  CMakeLists.txt  Doxyfile  README.md  makefile  q  run_tests  tensor.hh
Documentation/html/: annotated.html  classes.html  classtensor_1_1BinaryAdd-members.html  classtensor_1_1BinaryAdd.html  classtensor_1_1BinaryAdd__inherit__graph.dot  classtensor_1_1BinaryAdd__inherit__graph.md5  classtensor_1_1BinaryMul-members.html  classtensor_1_1BinaryMul.html  classtensor_1_1BinaryMul__coll__graph.md5  classtensor_1_1BinaryMul__inherit__graph.dot  classtensor_1_1BinarySub-members.html  classtensor_1_1BinarySub.html  classtensor_1_1BinarySub__coll__graph.dot  classtensor_1_1BinarySub__coll__graph.md5  classtensor_1_1Indices-members.html  classtensor_1_1Indices.html  classtensor_1_1Shape-members.html  classtensor_1_1Shape.html  classtensor_1_1Shape_3_010_01_4-members.html  classtensor_1_1Shape_3_010_01_4.html  classtensor_1_1Tensor-members.html  classtensor_1_1Tensor.html  classtensor_1_1Tensor_1_1ConstIterator-members.html  classtensor_1_1Tensor_1_1ConstIterator.html  classtensor_1_1Tensor_1_1ConstReverseIterator-members.html  classtensor_1_1Tensor_1_1ConstReverseIterator.html  classtensor_1_1Tensor_1_1Iterator-members.html  classtensor_1_1Tensor_1_1Iterator.html  classtensor_1_1Tensor_1_1Proxy-members.html  classtensor_1_1Tensor_1_1Proxy.html  classtensor_1_1Tensor_1_1ReverseIterator-members.html  classtensor_1_1Tensor_1_1ReverseIterator.html  classtensor_1_1Tensor_3_01T_00_010_01_4-members.html  classtensor_1_1Tensor_3_01T_00_010_01_4.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstIterator-members.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstIterator.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstReverseIterator-members.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstReverseIterator.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1Iterator-members.html  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1Iterator.html  (+117 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js
Documentation/latex/: annotated.tex  classtensor_1_1BinaryAdd.tex  classtensor_1_1BinaryAdd.tex.tmp  classtensor_1_1BinaryAdd__coll__graph.dot  classtensor_1_1BinaryAdd__inherit__graph.md5  classtensor_1_1BinaryMul.tex  classtensor_1_1BinaryMul__coll__graph.dot  classtensor_1_1BinaryMul__coll__graph.md5  classtensor_1_1BinarySub.tex  classtensor_1_1BinarySub__coll__graph.dot  classtensor_1_1BinarySub__inherit__graph.md5  classtensor_1_1Indices.tex  classtensor_1_1Shape.tex  classtensor_1_1Shape_3_010_01_4.tex  classtensor_1_1Tensor.tex  classtensor_1_1Tensor_1_1ConstIterator.tex  classtensor_1_1Tensor_1_1ConstReverseIterator.tex  classtensor_1_1Tensor_1_1Iterator.tex  classtensor_1_1Tensor_1_1Proxy.tex  classtensor_1_1Tensor_1_1ReverseIterator.tex  classtensor_1_1Tensor_3_01T_00_010_01_4.tex  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstIterator.tex  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ConstReverseIterator.tex  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1Iterator.tex  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1Proxy.tex  classtensor_1_1Tensor_3_01T_00_010_01_4_1_1ReverseIterator.tex  classtensor_1_1Tensor_3_01T_00_010_01_4__coll__graph.dot  classtensor_1_1Tensor_3_01T_00_010_01_4__inherit__graph.md5  classtensor_1_1Tensor__coll__graph.md5  classtensor_1_1Tensor__inherit__graph.dot  hierarchy.tex  refman.tex  structtensor_1_1Expression.tex  structtensor_1_1IsScalar.tex  structtensor_1_1IsScalar_3_01Tensor_3_01T_00_010_01_4_01_4.tex  structtensor_1_1IsScalar_3_01Tensor_3_01T_00_01N_01_4_01_4.tex  structtensor_1_1IsTensor.tex  structtensor_1_1IsTensor_3_01Tensor_3_01T_00_01N_01_4_01_4.tex  structtensor_1_1LogicalAnd.tex  structtensor_1_1ValueToTensor.tex  (+12 more)
benchmark/: CMakeLists.txt  assign.benchmark.cc  benchmark.hh  expressions.benchmark.cc  initialize.benchmark.cc
example/: CMakeLists.txt  dummy.example.cc
include/: .tensor.hh.swp  tensor.hh
lib/: makefile  tensor.cpp  tensor.hh
test/: .expressions.test.cc.swp  .intialize.test.cc.swp  .object.test.cc.swp  .test.cc.swp  CMakeLists.txt  TEST  access.test.cc  arithmetic.test.cc  assign.test.cc  assign.test.d  containers.test.cc  conversions.test.cc  exception.test.cc  expressions.test.cc  initialize.test.cc  intialize.test.cc  intialize.test.d  iterator.test.cc  makefile  manip.test.cc  manipulation.cc  object.test.cc  objest.test.cc  objest.test.d  opencl.cc  opencl.test.cc  ostream.test.cc  shape.test.cc  slice.test.cc  slice.test.d  string.test.cc  tensor.hh  test  test.cc  test.cpp  test.d  test.hh
